--- a/monopoly/notebooks/Monopoly.ipynb
+++ b/monopoly/notebooks/Monopoly.ipynb
@@ -3954,65 +3954,43 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Asegúrate de que 'ds_final' esté definido y contenga los datos necesarios\n",
     "ds_final = pd.get_dummies(ds_final, drop_first=True)\n",
     "\n",
-    "# Verifica si hay valores nulos en 'Consumo'\n",
-    "if ds_final['Consumo'].isnull().any():\n",
-    "    print(\"Warning: There are missing values in 'Consumo'. Consider imputing them before proceeding.\")\n",
-    "\n",
-    "# Categorización de 'Consumo'\n",
     "bins = [0, 20000, 40000, 60000, 80000, 100000]\n",
-    "labels = ['Low', 'Medium', 'High', 'Very High', 'Extreme']\n",
-    "ds_final['Renta_categoria'] = pd.cut(ds_final['Consumo'], bins=bins, labels=labels)\n",
+    "labels = ['Bajo', 'Medio', 'Alto', 'Muy Alto', 'Extremo']\n",
+    "ds_final['Renta_categoria'] = pd.cut(ds_final['Renta'], bins=bins, labels=labels)\n",
     "\n",
-    "# Verifica si 'Renta_categoria' se ha creado correctamente\n",
+    "\n",
+    "\n",
     "if 'Renta_categoria' in ds_final.columns:\n",
-    "    print(\"Renta_categoria created successfully.\")\n",
+    "    X = ds_final.drop(['Renta_categoria'], axis=1)  \n",
+    "    y = ds_final['Renta_categoria']  \n",
     "else:\n",
-    "    print(\"Error: 'Renta_categoria' was not created.\")\n",
-    "\n",
-    "# Asegúrate de que 'Renta_categoria' no tenga valores nulos\n",
-    "if ds_final['Renta_categoria'].isnull().any():\n",
-    "    print(\"Warning: There are missing values in 'Renta_categoria'. Consider imputing them before proceeding.\")\n",
+    "    print(\"La columna 'Renta_categoria' no se encuentra en el DataFrame.\")\n",
     "\n",
     "X = ds_final.drop(['Renta_categoria'], axis=1)  \n",
     "y = ds_final['Renta_categoria']  \n",
     "\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Asegúrate de que y_train no tenga valores nulos\n",
-    "if y_train.isnull().any():\n",
-    "    print(\"Warning: There are missing values in 'y_train'. Consider imputing them before proceeding.\")\n",
     "\n",
-    "# Balanceo de clases con SMOTE\n",
     "smote = SMOTE(random_state=42)\n",
     "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
     "\n",
-    "# Escalado de características\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train_resampled)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "# Definición de modelos\n",
+    "\n",
     "models = {\n",
-    "    \"Logistic Regression\": LogisticRegression(max_iter=500),\n",
+    "    \"Regresión Logística\": LogisticRegression(max_iter=500),\n",
     "    \"KNN\": KNeighborsClassifier(n_neighbors=5),\n",
-    "    \"Decision Tree\": DecisionTreeClassifier(max_depth=3)\n",
+    "    \"Árbol de Decisión\": DecisionTreeClassifier(max_depth=3)\n",
     "}\n",
     "\n",
-    "# Entrenamiento y evaluación de modelos\n",
+    "\n",
     "results = {}\n",
     "\n",
     "for name, model in models.items():\n",
@@ -4031,17 +4009,18 @@
     "        \"F1-Score\": class_report['weighted avg']['f1-score']\n",
     "    }\n",
     "\n",
-    "# Mostrar resultados\n",
+    "\n",
     "results_df = pd.DataFrame(results).T\n",
     "print(results_df)\n",
     "\n",
-    "# Visualización de matrices de confusión\n",
+    "\n",
+    "import seaborn as sns\n",
     "fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
     "for ax, (name, result) in zip(axes, results.items()):\n",
     "    sns.heatmap(result[\"Confusion Matrix\"], annot=True, fmt='d', ax=ax, cmap='Blues')\n",
     "    ax.set_title(name)\n",
-    "    ax.set_xlabel('Prediction')\n",
-    "    ax.set_ylabel('Reality')\n",
+    "    ax.set_xlabel('Predicción')\n",
+    "    ax.set_ylabel('Realidad')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
